feat: mock data and randomly delay/throw error

--- a/riverport-schedules-api/package.json
+++ b/riverport-schedules-api/package.json
@@ -14,13 +14,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typecheck": "tsc --noEmit",
-    "migration:create": "npm run typeorm -- migration:create",
-    "migration:generate": "npm run typeorm -- migration:generate -d src/database/data-source.ts",
-    "migration:run": "npm run typeorm -- migration:run -d src/database/data-source.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d src/database/data-source.ts",
-    "seed": "ts-node src/database/seed.ts"
+    "typecheck": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
